# mirai-chan

./: Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  irc-bot.vala  main.vala
